<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculatorFragment">

    <EditText
        android:id="@+id/firstOperand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:autofillHints="@string/default_result"
        android:hint="@string/default_result"
        android:text="@string/default_result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/firstOperand2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:autofillHints="@string/default_result"
        android:hint="@string/default_result"
        android:text="@string/default_result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstOperand" />

    <TextView
        android:id="@+id/resultText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/default_result"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/firstOperand2"
        app:layout_constraintTop_toBottomOf="@+id/firstOperand2" />

    <Button
        android:id="@+id/plusButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/addition_operator"
        app:layout_constraintEnd_toEndOf="@+id/firstOperand2"
        app:layout_constraintTop_toBottomOf="@+id/resultText" />

    <Button
        android:id="@+id/minusButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/negate_operator"
        app:layout_constraintStart_toStartOf="@+id/firstOperand2"
        app:layout_constraintTop_toBottomOf="@+id/resultText" />

    <Button
        android:id="@+id/multiplyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/multiply_operator"
        app:layout_constraintStart_toStartOf="@+id/firstOperand2"
        app:layout_constraintTop_toBottomOf="@+id/minusButton" />

    <Button
        android:id="@+id/divideButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/divide_operator"
        app:layout_constraintEnd_toEndOf="@+id/firstOperand2"
        app:layout_constraintTop_toBottomOf="@+id/plusButton" />

</androidx.constraintlayout.widget.ConstraintLayout>